# mongo_bsontype_perfomances_check

./: README.md  pyproject.toml
results/: result.json
src/: plotting.py  script.py
