[tool.poetry]
name = "mongo-bsontype-perfomances-check"
version = "0.1.0"
description = ""
authors = ["Zackarie Vinckier <zackarie.vinckier--coffinier@eviden.com>"]
license = "MIT license"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pymongo = "^4.11.1"
matplotlib = "^3.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
